@@ -32,6 +32,7 @@
 - Fix: [#22774] Fix entities leaving stale pixels on the screen when the framerate is uncapped.
 - Fix: [#22805] Fix deadzone when panning the view in positive axis directions.
 - Fix: [#22857] Side-Friction Roller Coaster train clips through slopes.
+- Fix: [#22880] macOS builds lack asset packs and scenario patches.
 - Fix: [objects#346] Invalid refund price for Brick Base Block scenery item.
 
 0.4.14 (2024-09-01)
